kube/Front.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: restar

---
# re-star.ru site
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: re-star-ru
  name: re-star-ru
  namespace: restar
spec:
  replicas: 4
  selector:
    matchLabels:
      app: re-star-ru
  template:
    metadata:
      labels:
        app: re-star-ru
    spec:
      containers:
        - image: ghcr.io/re-star-ru/erp:latest
          name: re-star-ru
          resources:
            limits:
              memory: "128M"
              cpu: "200m"
          ports:
            - containerPort: 8080
              name: http

---
apiVersion: v1
kind: Service
metadata:
  name: re-star-ru
  namespace: restar
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: re-star-ru

---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: re-star-ru
  namespace: restar
spec:
  virtualhost:
    fqdn: re-star.ru
    tls:
      secretName: kube-system/re-star-ru-wildcard
  routes:
    - services:
        - name: re-star-ru
          port: 8080
